self-host/fixtures/invalid/numeric-cmp-arg.bclj
#lang beagle/clj
(ns numeric-cmp-arg.test)

;; `<=` takes the numeric tower (Number); a String arg is rejected by both.
(defn run [s :- String] :- Bool
  (<= s 10))
